# github-repo-connection-demo

./: .gitignore  Makefile  README.md  SETUP.md  metric-flow-example.py
backend/: .env  .env.example  main.py  pyproject.toml  repos.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: GitHubConnect.tsx
